--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>480</height>
+    <width>600</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>9</x>
       <y>-1</y>
-      <width>761</width>
-      <height>461</height>
+      <width>600</width>
+      <height>400</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -30,7 +30,7 @@
      <widget class="QPushButton" name="pushButton_8">
       <property name="geometry">
        <rect>
-        <x>650</x>
+        <x>500</x>
         <y>50</y>
         <width>83</width>
         <height>25</height>
@@ -43,8 +43,8 @@
      <widget class="QLineEdit" name="lineEdit_2">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>220</y>
+        <x>20</x>
+        <y>180</y>
         <width>113</width>
         <height>25</height>
        </rect>
@@ -53,8 +53,8 @@
      <widget class="QPushButton" name="pushButton_18">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>330</y>
+        <x>20</x>
+        <y>270</y>
         <width>83</width>
         <height>25</height>
        </rect>
@@ -125,8 +125,8 @@
      <widget class="QPushButton" name="pushButton_15">
       <property name="geometry">
        <rect>
-        <x>90</x>
-        <y>250</y>
+        <x>10</x>
+        <y>210</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -138,8 +138,8 @@
      <widget class="QPushButton" name="pushButton_16">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>290</y>
+        <x>20</x>
+        <y>240</y>
         <width>83</width>
         <height>25</height>
        </rect>
@@ -151,8 +151,8 @@
      <widget class="QPushButton" name="pushButton_7">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>140</y>
+        <x>300</x>
+        <y>110</y>
         <width>83</width>
         <height>25</height>
        </rect>
@@ -164,7 +164,7 @@
      <widget class="QPushButton" name="pushButton_14">
       <property name="geometry">
        <rect>
-        <x>650</x>
+        <x>500</x>
         <y>80</y>
         <width>83</width>
         <height>25</height>
@@ -210,8 +210,8 @@
      <widget class="QPushButton" name="pushButton_17">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>190</y>
+        <x>300</x>
+        <y>140</y>
         <width>80</width>
         <height>25</height>
        </rect>
@@ -284,8 +284,8 @@
      <widget class="QPushButton" name="pushButton_21">
       <property name="geometry">
        <rect>
-        <x>330</x>
-        <y>260</y>
+        <x>300</x>
+        <y>170</y>
         <width>80</width>
         <height>23</height>
        </rect>
@@ -297,8 +297,8 @@
      <widget class="QPushButton" name="pushButton_22">
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>140</y>
+        <x>400</x>
+        <y>40</y>
         <width>80</width>
         <height>23</height>
        </rect>
@@ -310,8 +310,8 @@
      <widget class="QPushButton" name="pushButton_23">
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>180</y>
+        <x>400</x>
+        <y>70</y>
         <width>80</width>
         <height>23</height>
        </rect>
@@ -323,8 +323,8 @@
      <widget class="QPushButton" name="pushButton_24">
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>220</y>
+        <x>400</x>
+        <y>100</y>
         <width>80</width>
         <height>23</height>
        </rect>
@@ -336,14 +336,141 @@
      <widget class="QPushButton" name="pushButton_25">
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>270</y>
+        <x>400</x>
+        <y>170</y>
         <width>80</width>
         <height>23</height>
        </rect>
       </property>
       <property name="text">
        <string>Test new</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_26">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>220</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>On 405</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_27">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>250</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>On 450</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_28">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>280</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>On 490</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_29">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>310</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>On 630</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_31">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>260</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Off LED</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_34">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>310</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Tune 630</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_35">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>220</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Tune 405</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_36">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>250</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Tune 450</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_37">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>280</y>
+        <width>80</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Tune 490</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_3">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>220</y>
+        <width>89</width>
+        <height>23</height>
+       </rect>
       </property>
      </widget>
     </widget>
